syntax = "proto3";

package weather;

option java_multiple_files = true;
option java_package = "org.example.weather";

message PlaceMessage {
    string city = 1;
}

message WeatherMessage {
    string city = 1;
    string weather = 2;
    int32 temperature = 3;
}

service WeatherService {
    rpc GetWeather(PlaceMessage) returns (WeatherMessage) {}
}
